--- a/appendix.tex
+++ b/appendix.tex
@@ -1,51 +1,51 @@
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
-
+  
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/schnitt.png}
     \caption{Code snippet 1}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/konto.png}
     \caption{Code snippet 2}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/name.png}
     \caption{Code snippet 3}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/m.png}
     \caption{Code snippet 4}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/rechner.png}
     \caption{Code snippet 5}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/hello.png}
     \caption{Code snippet 6}
     \label{fig:appendix-example}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{figures/codeb.png}
+    \includegraphics[width=0.7\textwidth]{figures/bier.png}
     \caption{Code snippet 7}
     \label{fig:appendix-example}
 \end{figure}
