--- a/appendix.tex
+++ b/appendix.tex
@@ -1,64 +1,13 @@
-\chapter*{Appendix}
-\addcontentsline{toc}{chapter}{Appendix}
-  
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/schnitt.png}
-    \caption{Code snippet 1}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/konto.png}
-    \caption{Code snippet 2}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/name.png}
-    \caption{Code snippet 3}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/m.png}
-    \caption{Code snippet 4}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/rechner.png}
-    \caption{Code snippet 5}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/hello.png}
-    \caption{Code snippet 6}
-    \label{fig:appendix-example}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\textwidth]{figures/bier.png}
-    \caption{Code snippet 7}
-    \label{fig:appendix-example}
-\end{figure}
-
-
-
+\chapter{Appendix}
+\label{sec:appendix}
 
 % Slightly larger size for the table
-\begin{table}[htbp]
+\begin{table}[H]
+\caption{Questions of questionnaire}
 \resizebox{\textwidth}{!}{%
 \begin{minipage}{\textwidth}
 \footnotesize  % Slightly larger font size than \small
-\begin{longtable}{|p{6cm}|p{6cm}|}  % Increased column width to 6cm
+\begin{longtable}{|p{5cm}|p{9cm}|}  % Increased column width to 6cm
 \hline
 \textbf{Question} & \textbf{Answer} \\
 \hline
@@ -113,7 +62,59 @@ E-Mail-Adresse für MMI-Punkte erhalten / Gutschein-Verlosung & Text \\
 \hline
 \end{longtable}
 \end{minipage}%
-}
+} 
 \end{table}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/schnitt.png}
+    \caption{Code snippet 1}
+    \label{fig:appendix-example1}
+\end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/konto.png}
+    \caption{Code snippet 2}
+    \label{fig:appendix-example2}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/name.png}
+    \caption{Code snippet 3}
+    \label{fig:appendix-example3}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/m.png}
+    \caption{Code snippet 4}
+    \label{fig:appendix-example4}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/rechner.png}
+    \caption{Code snippet 5}
+    \label{fig:appendix-example5}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/hello.png}
+    \caption{Code snippet 6}
+    \label{fig:appendix-example6}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/bier.png}
+    \caption{Code snippet 7}
+    \label{fig:appendix-example7}
+\end{figure}
+
+\thispagestyle{plain}
