--- a/config.tex
+++ b/config.tex
@@ -1077,6 +1077,7 @@
 
 % EN: Forest: apgf/TikZ-based package for drawing linguistic trees - https://ctan.org/pkg/forest
 \usepackage{forest}
+\usepackage{subcaption}
 
 % EN: Layout: bottoms of pages not aligned to each other
 % DE: Der untere Rand darf "flattern"
